--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,6 +21,6 @@
     <label for="hungry">Would this complete your order?</label><br>
   </div>
 
-  <button type="submit">Yes!</button>
+  <button type="button">Yes!</button>
 </form>
 </div>
